plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	
	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.36'
	annotationProcessor 'org.projectlombok:lombok:1.18.36'
	
	// JWT (JSON Web Token)
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Validación & Swagger OpenAPI
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.batch:spring-batch-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile) {
	options.fork = true
	options.forkOptions.jvmArgs += [
		'--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
		'--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
		'--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
		'--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
		'--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
		'--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
		'--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
		'--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
		'--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
	]
}

tasks.named('test') {
	useJUnitPlatform()
}
